# difi

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE.md  MANIFEST.in  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_travis.txt  setup.cfg  setup.py
.github/workflows/: conda-build-lint-test.yml  conda-publish.yml  docker-build-lint-test.yml  pip-build-lint-test-coverage.yml  pip-build-lint-test.yml  pip-build-test-coverage.yml  pip-publish.yml  publish.yml  python-package-conda.yml  python-package-pip.yml  python-publish-pypi.yml  python-publish.yml  rust.yml
benches/: benchmark_pipeline.rs
dev/bench/: data.js
difi/: __init__.py  cifi.py  difi.py  io.py  main.py  metrics.py  utils.py  version.py
difi/experimental/: rundifi.py
difi/tests/: allLinkages_solution.txt  allTruths_solution.txt  conftest.py  create_test_data.py  linkageMembers.txt  linkageMembers_solution.txt  linkagesByLine.txt  observations.txt  test_cifi.py  test_cifi_benchmarks.py  test_difi.py  test_difi_benchmarks.py  test_io.py  test_metrics.py  test_metrics_benchmarks.py  test_observations.csv  test_utils.py
examples/: classes.txt  example_lsstssp.ipynb  example_mops.ipynb  example_pytrax.ipynb  example_thor.ipynb  linkages.txt  observations.txt  tutorial.ipynb
examples/data/mops/: night_52391_through_52406.dets
examples/data/thor/: allClusters.txt  allObjects.txt  clusterMembers.txt  projected_obs.txt
python/difi/: __init__.py  analyze.py  cifi.py  difi.py  findability.py  metrics.py  partitions.py
python/difi/tests/: conftest.py  test_difi.py  test_metrics.py  test_partitions.py
python/difi/tests/testdata/: linkage_members.parquet
recipe/: meta.yaml
scripts/: check_versions.sh
src/: cifi.rs  difi.rs  error.rs  io.rs  lib.rs  mmap.rs  partitions.rs  types.rs
src/difi/: __init__.py  cifi.py  difi.py  metrics.py  nightly.py  observations.py  partitions.py  utils.py
src/difi/experimental/: miniDifi.py
src/difi/tests/: conftest.py  create_test_data.py  linkagesByLine.txt  test_cifi.py  test_cifi_benchmarks.py  test_difi.py  test_difi_benchmarks.py  test_metrics.py  test_metrics_benchmarks.py  test_nightly.py  test_observations.py  test_partitions.py  test_utils.py
src/difi/tests/testdata/: linkage_members.parquet  observations.parquet
src/metrics/: mod.rs  singleton.rs  tracklet.rs
src/python/: mod.rs
tests/: cli.rs  test_io_roundtrip.rs  test_mmap.rs  test_pipeline.rs  test_python_parity.rs  test_tracklet_metric.rs
