[package]
name = "difi-rs"
version = "2.0.0-rc4"
description = "Did I Find It? — Evaluate linkage completeness and purity for astronomical surveys"
authors = [
    "Joachim Moeyens <moeyensj@uw.edu>",
]
edition = "2024"
rust-version = "1.85.0"
license = "BSD-3-Clause"
repository = "https://github.com/moeyensj/difi"
homepage = "https://github.com/moeyensj/difi"
documentation = "https://docs.rs/difi-rs"
include = ["src/**/*", "benches/**/*", "tests/**/*", "Cargo.toml", "README.md", "LICENSE.md"]

[lib]
name = "difi"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-arrow", "arrow/ffi"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
pyo3-arrow = { version = "0.17", optional = true }
rayon = "1.11.0"
memmap2 = "0.9"
arrow = { version = "58", default-features = false }
parquet = { version = "58", default-features = false, features = ["arrow", "snap"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"
parquet = { version = "58", default-features = false, features = ["arrow", "snap"] }

[[bench]]
name = "benchmark_pipeline"
harness = false
