[project]
name = "difi"
version = "2.0.0rc4"
authors = [
    {name = "Joachim Moeyens", email = "moeyensj@uw.edu"},
]
maintainers = [
    {name = "Joachim Moeyens", email = "moeyensj@uw.edu"},
]
description = "Did I Find It? — Evaluate linkage completeness and purity for astronomical surveys"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "astronomy",
    "astrophysics",
    "space",
    "science",
    "asteroids",
    "comets",
    "solar system"
]

dependencies = [
    "pyarrow>=14.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "difi._core"
features = ["python"]

[project.urls]
"Documentation" = "https://github.com/moeyensj/difi#README.md"
"Issues" = "https://github.com/moeyensj/difi/issues"
"Source" = "https://github.com/moeyensj/difi"

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "isort",
    "mypy",
    "maturin",
    "pytest-benchmark",
    "pytest-cov",
    "pytest",
    "ruff",
]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110
target-version = "py311"
lint.ignore = []
exclude = ["build"]

[tool.mypy]
ignore_missing_imports = true
