[metadata]
name = difi
version = file: difi/version.py
author = Joachim Moeyens
author_email = moeyensj@uw.edu
home_page = https://github.com/moeyensj/difi
description = Did I Find It?
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.md
keywords = astronomy, astrophysics, space, science, asteroids, comets, solar system
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.6
packages = difi
setup_requires =
    setuptools >= 42
    wheel
    setuptools_scm
install_requires = 
    numpy
    pandas
tests_require = pytest

[options.package_data]
difi = tests/*.txt

[aliases]
test=pytest